# tonic-deploy

./: .gitignore  README.md
comparables/node/dynamic_codegen/: greeter_client.js
compose-build/: Cargo.toml  build.rs  docker-compose.yml
compose-build/proto/hellotonic/: hellotonic.proto
compose-build/src/hellotonic/: client.rs  dockerfile  entrypoint.sh  server.rs
hello-tonic/: Cargo.toml  build.rs
hello-tonic/proto/hellotonic/: hellotonic.proto
hello-tonic/src/hello-load-balance/: client.rs  client_and_server.rs  server.rs
hello-tonic/src/hellotonic/: client.rs  client_and_server.rs  server.rs
rustwide-build/: Cargo.toml  rustwide_client_build_and_run.rs  rustwide_pair_build_and_run.rs  rustwide_server_build_and_run.rs
