[package]
name = "hello-tonic"
version = "0.1.0"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

build = "build.rs"

#define as workspace or root directory build will start some client/servers 
[workspace]

[[bin]]
name = "hellotonic-server"
path = "src/hellotonic/server.rs"

[[bin]]
name = "hellotonic-client"
path = "src/hellotonic/client.rs"

[[bin]]
name = "hellotonic-pair"
path = "src/hellotonic/client_and_server.rs"

[[bin]]
name = "hello-load-balance-client"
path = "src/hello-load-balance/client.rs"

[[bin]]
name = "hello-load-balance-server"
path = "src/hello-load-balance/server.rs"

[[bin]]
name = "monitor"
path = "src/monitor.rs"


[dependencies]
tonic = { path = "/code/test/tonic/tonic" }
bytes = "0.4"
prost = "0.5"
log = "0.4.0"
env_logger = "0.7.0"
prost-derive = "0.5.0"
rayon = "1.2.0"
docopt = "1"

tokio = "=0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await", "alloc"] }
async-stream = "0.1.2"
http = "0.1"
tower = "=0.3.0-alpha.2"
tracing-futures = { git = "https://github.com/tokio-rs/tracing" }
tracing = "0.1"
tracing-attributes = "0.1.4"
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing" }
serde_derive = "1.0.101"
serde = "1.0"

[build-dependencies]
tonic-build = { path = "/code/test/tonic/tonic-build" }
log = "0.4.0"
env_logger = "0.7.0"
prost-derive = "0.5.0"
bytes = "0.4"
prost = "0.5"

[features]
default = ["transport", "rustfmt"]
rustfmt = []
transport = []

[package.metadata.docs.rs]
all-features = true

[profile.release]
debug = true

